fixed scrollbar not working on mobile devices

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -310,12 +310,16 @@
 }
 
 @media screen and (max-width: 768px) {
+    .disable-overflow {
+        overflow: hidden;
+    }
+
     .modal {
         position: fixed;
         top: 0;
         left: 0;
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
         background-color: rgba(0, 0, 0, 0.65);
         display: flex;
         justify-content: center;
@@ -328,11 +332,13 @@
         background: rgba(0, 0, 0, 0.35);
         box-shadow: 0 1px 20px 2px var(--icon);
         text-align: center;
-        max-width: 75%;
+        max-width: 90%;
         position: relative;
         padding: 2rem 1rem;
         margin: 1rem;
+        height: 80%;
         border-radius: 0.3rem;
+        overflow-y: auto;
     }
 
     .modal-content h1 {
@@ -344,7 +350,6 @@
     }
 
     .modal-content section {
-
         font-size: 1rem;
         font-weight: 200;
         font-family: 'Poppins', sans-serif;
@@ -409,7 +414,7 @@
     .subCat {
         display: flex;
         flex-wrap: wrap;
-       
+
         justify-content: center;
         text-align: center;
     }
